--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Wolf's page</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="MainStyleSheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <div id="coverall">
