--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </div>
         <div id="coverall"></div> 
         <table>
+            <tr><td></td><td></td><td></td></tr>
             <tr>
-                <td colspan="2">
+                <td colspan = 3 >
                     <h1 class="crtText" style= "animation-duration: 8s;">The Cubefall Project</h1>
                 </td>
             </tr>
@@ -41,7 +42,7 @@
                 <td>
                     The cubefall project was a 3d gamelike website built entirely using div manipulation. It uses only html, css and js, is optimised enough it can run on any device with a keyboard 
                 </td>
-                <td>
+                <td colspan = 2>
                     <div id="cubefall">
                         <iframe src = 'cubefall\index.html' title=" CubeFall" style = "left: 0%;"></iframe>
                         <div id="cubefallClick"> click to visit</div>
@@ -49,20 +50,20 @@
                 </td>
             </tr>
             <tr>
-                 <td colspan="2">
+                 <td colspan = 3>
                     <div id="Qotd"></div>
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td colspan = 3>
                     <h1 style= "animation-duration: 9s;">Mask Maker</h1>
                 </td>
             </tr>
             <tr>
-                <td>
-                    <div id="cubefall">
+                <td colspan = 2>
+                    <div>
                         <iframe src = 'cubefall\index.html' title=" CubeFall" style = "left: 0%;"></iframe>
-                        <div id=""> click to visit</div>
+                        <div> click to visit</div>
                     </div>
                 </td>
                 <td>
@@ -70,31 +71,68 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td colspan = 3>
                     <h1 style= "animation-duration: 9s;">snow fall</h1>
-                </td>
-                <td>
-                    this webpage is still under development so is probably very broken lul! dont mind me :)
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td>
+                    this webpage is still under development so is probably very broken lul! dont mind me :)
+                </td>
+                <td colspan = 2>
+                    content 
+                </td>
+            </tr>
+            <tr>
+                <td colspan = 3>
                     <h1 style= "animation-duration: 9s;">air motor</h1>
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td>
+                    this webpage is still under development so is probably very broken lul! dont mind me :)
+                </td>
+                <td colspan = 2>
+                    content 
+                </td>
+            </tr>
+            <tr>
+                <td colspan = 3>
                     <h1 style= "animation-duration: 9s;">glados</h1>
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td>
+                    this webpage is still under development so is probably very broken lul! dont mind me :)
+                </td>
+                <td colspan = 2>
+                    content 
+                </td>
+            </tr>
+            <tr>
+                <td colspan = 3>
                     <h1 style= "animation-duration: 9s;">variable pitch horisontal axis wind turbine</h1>
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td>
+                    this webpage is still under development so is probably very broken lul! dont mind me :)
+                </td>
+                <td colspan = 2>
+                    content 
+                </td>
+            </tr>
+            <tr>
+                <td colspan = 3>
                     <h1 style= "animation-duration: 9s;">vr immersive game design for education</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    this webpage is still under development so is probably very broken lul! dont mind me :)
+                </td>
+                <td colspan = 2>
+                    content 
                 </td>
             </tr>
         </table>
