--- a/index.html
+++ b/index.html
@@ -34,22 +34,6 @@
         <table>
             <tr><td></td><td></td><td></td></tr>
             <tr>
-                <td colspan = 3 >
-                    <h1 class="crtText" style= "animation-duration: 8s;">The Cubefall Project</h1>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    The cubefall project was a 3d gamelike website built entirely using div manipulation. It uses only html, css and js, is optimised enough it can run on any device with a keyboard 
-                </td>
-                <td colspan = 2>
-                    <div id="cubefall">
-                        <iframe src = 'projects\Cubefall\index.html' title=" CubeFall" style = "left: 0%;"></iframe>
-                        <div id="cubefallClick"> click to visit</div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
                  <td colspan = 3>
                     <div id="Qotd"></div>
                 </td>
@@ -65,17 +49,15 @@
         make page content tileable using js 
         */
        //
-       const BaseUrl = "https://raw.githubusercontent.com/Rhinossoross/Rhinossoross.github.io/main/";
+       const BaseUrl ="/" //"https://raw.githubusercontent.com/Rhinossoross/Rhinossoross.github.io/main/";
 
         //inforce top of page at page load
         history.scrollRestoration = "manual";
         window.scrollTo(0, 0);
         // quick clear for coverall
-        const coverall =document.getElementById("coverall")
+        const coverall = document.getElementById("coverall")
         coverall.addEventListener("click",()=>{coverall.style.animationPlayState = "running";})
         
-        //qotd reader
-        const qotd = document.getElementById("Qotd");
 
 
         //table filler:
@@ -101,9 +83,10 @@
         projectsList = fetch(BaseUrl + "projectsList.txt")
             .then(response => response.text())
             .then(data => {
+                let i=1;
                 data.split('\n').forEach(project => {
                     const [title, description,iframeSrc] = project.split('|');
-
+                    i++;
                     const table = document.querySelector('table');
 
                     // Create title row
@@ -120,25 +103,31 @@
 
                     // Create content row
                     const contentRow = document.createElement('tr');
-
-                    const iframeCell = document.createElement('td');
-                    iframeCell.colSpan = 2;
-                    const iframeDiv = document.createElement('div');
-                    const iframe = document.createElement('iframe');
-                    iframe.src = "/projects/"+title+"/index.html";
-                    iframe.title = title;
-                    iframe.style.left = '0%';
-                    iframeDiv.appendChild(iframe);
-                    const visitDiv = document.createElement('div');
-                    visitDiv.textContent = ' click to visit';
-                    iframeDiv.appendChild(visitDiv);
-                    iframeCell.appendChild(iframeDiv);
-                    contentRow.appendChild(iframeCell);
-
-                    const descriptionCell = document.createElement('td');
-                    descriptionCell.textContent = description;
-                    contentRow.appendChild(descriptionCell);
-
+                    if (i%2 == 0){
+                        const descriptionCell = document.createElement('td'); //if even do this first
+                        descriptionCell.textContent = description;
+                        contentRow.appendChild(descriptionCell);
+                    }
+                        const iframeCell = document.createElement('td');    // if odd do this first
+                        iframeCell.colSpan = 2;
+                        const iframe = document.createElement('iframe');
+                        iframe.src = "/projects/"+title+"/index.html";
+                        iframe.title = title;
+                        iframeCell.appendChild(iframe);
+                        const visitDiv = document.createElement('div');
+                        visitDiv.className = 'iframeClick';
+                        visitDiv.textContent = ' click to visit';
+                        visitDiv.addEventListener("click",()=> {
+                            coverall.style.animationLoop;
+                            window.location.href = "/projects/"+title+"/index.html";
+                        });
+                        iframeCell.appendChild(visitDiv);
+                        contentRow.appendChild(iframeCell);
+                    if (i%2 != 0){
+                        const descriptionCell = document.createElement('td');
+                        descriptionCell.textContent = description;
+                        contentRow.appendChild(descriptionCell);
+                    }
                     table.appendChild(contentRow);
                 });
             })
@@ -154,12 +143,11 @@
 
 
 
-
-
         // create text stylisms
-        
+        const qotd = document.getElementById("Qotd");
+
         (async function(){
-        const response = await fetch('https://raw.githubusercontent.com/Rhinossoross/Rhinossoross.github.io/main/Qotd.txt')
+        const response = await fetch(BaseUrl+'Qotd.txt')
         const docData = await response.text();
         QotdList = docData.split('\n');
         initialiseQotd(QotdList);
@@ -181,11 +169,7 @@
         }
 
 
-        //set up click events for cubefall iframe
-        document.getElementById("cubefallClick").addEventListener("click",()=>{
-            coverall.style.animationLoop;
-            window.location.pathname ='cubefall/index.html';
-        })
+  
 
 
 
