--- a/projects/WindTurbine/index.html
+++ b/projects/WindTurbine/index.html
@@ -9,31 +9,29 @@
     </head>
     <body>
         <div id ="decoderText">
-                <h1> MASK MAKING</h1>
+                <h1> TEMPLATE PAGEEEE</h1>
         </div>
         <div>
-            one of my longest running hobbies it that of making masks, i started when i was very young making masks and steampunk outfits for halloween;
+IF YOU ARE SEING THIS>>> STOP IT   
+            i havent finished making it yet so this fun funky stuff will come soon! enjoy the random pictures
         </div>
         <table>
             <tr><td></td><td></td><td></td></tr>
             <tr>
                 <td>
-                    This mask was created using stock parts, bronze paint and punk rivets. The eye sockets are fitted with recycled sunglasses lenses with LEDs soldured into a cheek switch. 
-                    the hat is made from recycled a camping mat, and thin eva foam sheets, glued on using 2 part epoxy. this epoxy was used to create fake rivets around the panel edges.
-                    all parts are painted in black, and then a bronze paint is rubed over to give the effect of dirty joints. 
+                    #CONTENT woop woop here it is
                 </td>
                 <td colspan="2"><img class = "hoverHide" src="img1.png"> <img class = "hoverHideUnder" src="img2.png"></td>
             </tr>
             <tr>
                 <td colspan="2"><img class = "hoverHide" src="img3.png"><img class = "hoverHideUnder" src="img4.png"></td>
                 <td >
-                    When I was a teenager I created masks for my favorate content creators, Technoblade, and CorpseHusband, both of these masks were created fully on tinkercad. a increadibly basic CAD program that only really allows Boolian operation on parts;
-                    This cad file was then printed on my old anycubic cheron, and painted.
+                    MOAR CONTENT HERE WOOP WOOP
                 </td>
             </tr>
             <tr>
                 <td >
-                    The corpsehusband mask used a similar cheek operated light system as my first mask to power LEDs in the covered eye.
+EVEN MOAR CONTENT YOU CANT POSSIBLY ESCAPE IT all
                 </td>
                 <td colspan="2"><img class = "hoverHide" src="img5.png"><img class = "hoverHideUnder" src="img6.png"></td>
             </tr>
